<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="LogInActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:text="@string/log_in"
        android:textColor="#c38b92"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="30dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@+id/login"
        android:background="@color/white"
        android:hint="@string/username"
        android:maxLines="1"
        android:textColorHint="@color/pink"
        android:textColor="@color/pink"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/person"
        android:drawablePadding="20dp"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@+id/username"
        android:background="@color/white"
        android:hint="@string/password"
        android:maxLines="1"
        android:textColorHint="@color/pink"
        android:textColor="@color/pink"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="20dp"
        android:autofillHints=""
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginbtn"
        android:layout_below="@id/password"
        android:text="@string/login"
        android:backgroundTint="@color/pink"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signupLink"
        android:layout_below="@id/loginbtn"
        android:text="@string/don_t_have_an_acount"
        android:textSize="20sp"
        android:textColor="@color/pink"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:clickable="true"
        android:focusable="true"/>

</RelativeLayout>