<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCarActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addCar"
        android:text="@string/add_a_car"
        android:textColor="@color/pink"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="30dp"
        android:gravity="center"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/carNumber"
        android:layout_below="@+id/addCar"
        android:background="@color/white"
        android:hint="@string/car_number"
        android:maxLines="1"
        android:textColorHint="@color/pink"
        android:textColor="@color/pink"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableStart="@drawable/person"
        android:drawablePadding="20dp"
        android:autofillHints=""
        android:inputType="number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/carType"
        android:layout_below="@+id/carNumber"
        android:background="@color/white"
        android:hint="@string/car_type"
        android:maxLines="1"
        android:textColorHint="@color/pink"
        android:textColor="@color/pink"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableStart="@drawable/person"
        android:drawablePadding="20dp"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/carName"
        android:layout_below="@+id/carType"
        android:background="@color/white"
        android:hint="@string/car_name"
        android:maxLines="1"
        android:textColorHint="@color/pink"
        android:textColor="@color/pink"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableStart="@drawable/person"
        android:drawablePadding="20dp"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fuelUse"
        android:layout_below="@+id/carName"
        android:background="@color/white"
        android:hint="@string/fuel_consumption_per_kilometer"
        android:maxLines="1"
        android:textColorHint="@color/pink"
        android:textColor="@color/pink"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableStart="@drawable/person"
        android:drawablePadding="20dp"
        android:autofillHints=""
        android:inputType="number" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createFamilyBtn"
        android:layout_below="@id/fuelUse"
        android:text="@string/create_family"
        android:backgroundTint="@color/pink"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>

</RelativeLayout>